--- a/platformio.ini
+++ b/platformio.ini
@@ -13,5 +13,5 @@ platform = https://github.com/platformio/platform-espressif32.git
 board = esp32doit-devkit-v1
 framework = arduino
 lib_deps = 
-	t-vk/ESP32 BLE Keyboard @ ^0.2.2
 	thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays @ ^4.1.0
+platform_packages = platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git
