--- a/platformio.ini
+++ b/platformio.ini
@@ -14,4 +14,5 @@ board = esp32doit-devkit-v1
 framework = arduino
 lib_deps = 
 	thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays @ ^4.1.0
+	adafruit/Adafruit MCP23017 Arduino Library @ ^1.2.0
 platform_packages = platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git
